--- a/makefile.def
+++ b/makefile.def
@@ -2,4 +2,4 @@ BOARD := arduino:avr:uno
 #BOARD := attiny:avr:ATtinyX5:cpu=attiny85,clock=internal8
 ARDDUDE_OPTIONS := -l cr -o raw -d
 PORT := /dev/ttyUSB0
-LIBRARY_PATH := /home/pif/GitHub/piif /home/pif/GitHub/piif/ArduinoTools
+LIBRARY_PATH := /home/pif/GitHub/piif /home/pif/GitHub/piif/ArduinoTools /home/pif/GitHub/techpaul/PS2KeyAdvanced
